nhtestv2/nhtestv2-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nhtestv2
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nhtestv2
  template:
    metadata:
      labels:
        app: nhtestv2
    spec:
      containers:
      - image: docker.io/nethopper/simple-node-server:v2
        name: simple-node-server
        ports:
        - containerPort: 8080
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 80
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   timeoutSeconds: 3
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 80
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   timeoutSeconds: 3
