nhtestv2/nhtestv1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nhtestv1
spec:
  type: ExternalName
  externalName: nhtestv1.hub-server-1.nh-network-1.mynethopper.net
