nhtestv2/nhtestv2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nhtestv2
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: nhtestv2
