nhtestv2/nhtestv2-ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" 
  name: nhtestv2-ingress-prod
spec:
  ingressClassName: nginx
  rules:
  - host: test-service.prod.nh-network.mynethopper.net
    http:
      paths:
      - backend:
          service:
            name: nhtestv2
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - test-service.prod.nh-network.mynethopper.net
    secretName: nhtestv-tls
