nhtestv2/nhtestv2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nhtestv1-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: nhtestv2.kl-edge-22.mynethopper.net
    http:
      paths:
      - backend:
          service:
            name: nhtestv2
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: nhtest.prod.mynethopper.net
    http:
      paths:
      - backend:
          service:
            name: nhtestv2
            port:
              number: 8080
        path: /
        pathType: Prefix
